Move paragraph toolbar to the right to avoid overlap with text

--- a/src/full_node_view/FullNodeView.css
+++ b/src/full_node_view/FullNodeView.css
@@ -105,14 +105,6 @@
   min-width: 12rem;
 }
 
-/**
- * Text editor
- */
-textarea.mazed_editor {
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
 .mazed_editor_input {
   float: left;
 }
