--- a/src/full_node_view/FullNodeView.module.css
+++ b/src/full_node_view/FullNodeView.module.css
@@ -45,7 +45,28 @@
   box-shadow: 1px 1px #888888;
 }
 
+.fluid_container {
+  position: relative;
+}
+
+.fluid_card_toolbar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
+}
+
+
 .full_card {
   box-shadow:
     1px 1px 4px 0px var(--small_card_shadow_colour);
+}
+
+.full_card_body {
+  margin: 0;
+  padding-left: 1.2rem;
+  padding-right: 2rem;
+
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
